--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Cheerful Message Generator</h1>
+    <h1>Test title</h1>
     <div class="message-box">
       <p id="message-text">Press the button below to get a cheerful message!</p>
       <button id="btn-generate">Generate Message</button>
