--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cheerful Message Generator</title>
+  <title>Mrpopcorn was here</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Test title</h1>
+    <h1>Feeling down?</h1>
     <div class="message-box">
       <p id="message-text">Press the button below to get a cheerful message!</p>
-      <button id="btn-generate">Generate Message</button>
+      <button id="btn-generate">Press me!</button>
     </div>
   </div>
 
