--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mr.popcorn was here</title>
-  <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css?v=1.0"> <!-- Added query parameter to force cache refresh -->
 </head>
 <body>
   <div class="container">
@@ -15,6 +15,8 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+<script src="script.js?v=1.0"></script> <!-- Added query parameter to force cache refresh -->
+<!-- Updated link to index.html with query parameter -->
+  <a href="index.html?v=1.0.1">Home</a>
 </body>
 </html>
