--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <script src="script.js?v=1.0"></script> <!-- Added query parameter to force cache refresh -->
 <!-- Updated link to index.html with query parameter -->
-  <a href="index.html?v=1.0.1">Home</a>
+  <a href="index.html?v=1.0.1"></a>
 </body>
 </html>
