--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mr.popcorn was here</title>
-  <link rel="stylesheet" href="styles.css?v=1.0"> <!-- Added query parameter to force cache refresh -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css?v=1.0"><!-- Added query parameter to force cache refresh -->
 </head>
 <body>
   <div class="container">
@@ -12,11 +13,52 @@
     <div class="message-box">
       <p id="message-text">Press the button below to get a cheerful message!</p>
       <button id="btn-generate">Press me!</button>
+      <button id="btn-copy" style="display: none;">Copy</button>
+      
+      <!-- Social media buttons -->
+      <div class="social-media-buttons">
+        <a href="https://www.facebook.com/profile.php?id=100004966636083&mibextid=ZbWKwL" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/mohamed_404_69?s=09" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://instagram.com/mohamed._.ibrahim._?igshid=ZDc4ODBmNjlmNQ==" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.snapchat.com/add/thewhite_negro?share_id=MYrnOj1gwXU&locale=en-US" target="_blank">
+          <i class="fa-brands fa-snapchat"></i>
+        </a>
+        <a href="https://discordapp.com/users/339401471714000908" target="_blank">
+          <i class="fa-brands fa-discord"></i>
+        </a>
+        <a href="https://wa.me/+201050638922" target="_blank">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <a href="https://wa.me/+201115009711" target="_blank">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>
+        <a href="https://t.me/mohamed_4O4" target="_blank">
+          <i class="fa-brands fa-telegram"></i>
+        </a>
+        <a href="https://t.me/+201050638922" target="_blank">
+          <i class="fa-brands fa-telegram"></i>
+        </a>
+        <a href="https://TikTok.com/@4nub1s_404" target="_blank">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <!-- Add more social media buttons as needed -->
+      </div>
     </div>
   </div>
-
-  <script src="script.js?v=1.0"></script> <!-- Added query parameter to force cache refresh -->
-  <!-- Updated link to index.html with query parameter -->
-  <a href="index.html?v=1.0.1"></a>
-</body>
-</html>
+  <div class="thank-you-container">
+    <p class="thank-you-text">I wish you're doing well, good luck with your grades. <br>
+      Here's my email if you need to reach me: <a href="mailto:mohamedibrahim.mi7323@gmail.com">mohamedibrahim.mi7323@gmail.com</a> <br>
+      and here's my phone numbers: 01115009711 01050638922 <br>
+      I also added all my social media accounts <br>
+       I love you :3
+    </p>
+  </div>
+      <script src="script.js?v=1.0"></script>
+    </body>
+    </html>
