changed some notes

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </div>
   </div>
   <div class="thank-you-container">
-    <p class="thank-you-text">I wish you're doing well, good luck with your grades. <br>
-      Here's my email if you need to reach me: <a href="mailto:mohamedibrahim.mi7323@gmail.com">mohamedibrahim.mi7323@gmail.com</a> <br>
+    <p class="thank-you-text">I know that it's not what you expect, but I'm proud of you anyway <br>
+      Here's my email if you need to reach me: <a href="mailto:mohamedibrahim.mi7323@gmail.com">mohamedibrahim.mi7323@gmail.com</a>
       and here's my phone numbers: 01115009711 01050638922 <br>
       I also added all my social media accounts <br>
        I love you :3
